# gptxt

./: .gitignore  Cargo.toml  README.md  out.txt  test-pipe.csv
examples/: test.csv
src/: main.rs
