[package]
name = "gptcmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2"
crossterm = "0.26"
dirs = "5"
indicatif = "0.17"
once_cell = "1.17"
openai = "1.0.0-alpha.8"
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "707fbcf" }
tokio-util = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.7"
